@@ -7,6 +7,28 @@ Amount =
   $('#entry_billing_date').val(selected_date)
   $('#new-entry-dialog').modal( dynamic: true )
 
+@activateEntryDraggables = () ->
+  $('.entry_draggable').draggable(
+    revert: 'invalid'
+    helper: () ->
+      $(this).children('[data-object~="entry-helper"]').first().html()
+    cursorAt:
+      left: 10
+  )
+
+@activateDayDroppables = () ->
+  $('.day_droppable').droppable(
+    hoverClass: "hover",
+    drop: ( event, ui ) ->
+      billing_date = $(this).data('billing-date')
+      element_id = ui.draggable.attr('id')
+      entry_id = ui.draggable.data('entry-id')
+      $.post(root_url + 'entries/' + entry_id + '/move', "entry[billing_date]="+billing_date, null, "script")
+      false
+    accept: ( draggable ) ->
+      $(this).data('billing-date') != draggable.data('billing-date')
+  )
+
 jQuery ->
   $(document)
     .on('click', '[data-object~="calendar-next-month"]', () ->
