@@ -66,3 +66,18 @@ a:active, a:focus { text-decoration: none; color: #000; }
 .gain{
   color: #669966;
 }
+
+.entry-box {
+  background-color: white;
+
+  padding: 3px 5px;
+
+  border: 1px solid #bbb;
+  -moz-border-radius: 3px; /* Mozilla */
+  -webkit-border-radius: 3px; /* Webkit */
+  border-radius: 3px;
+
+  -webkit-box-shadow: 5px 5px 3px -3px rgba(0, 0, 0, 0.075);
+     -moz-box-shadow: 5px 5px 3px -3px rgba(0, 0, 0, 0.075);
+          box-shadow: 5px 5px 3px -3px rgba(0, 0, 0, 0.075);
+}
