@@ -1,0 +1,23 @@
+<% [true, false].each do |spending| %>
+  <% entries = @entries.select{ |e| e.billing_date == iDate and e.charge_type.counts_towards_spending? == spending }.sort{ |a,b| a.id <=> b.id } %>
+
+  <% entries.each do |entry| %>
+    <div class="entry_draggable" style="cursor:move" data-title="<%= entry.name %><%= ('&#13;' + h(entry.description)).html_safe unless entry.description.blank? %>" rel="tooltip" data-entry-id="<%= entry.id %>" data-billing-date="<%= entry.billing_date.strftime("%m/%d/%Y") %>">
+      <div class="calendar-entry-amount"><%= entry.amount.to_currency %></div>
+      <div class="calendar-entry-name" style="cursor:move">
+        <%= link_to(image_tag('001_15.png', style: 'border:none;vertical-align:baseline', size: '10x10', title: 'Not Charged'), mark_charged_entry_path(entry, authenticity_token: form_authenticity_token), remote: true, method: :post, confirm: "Are you sure you want to mark this entry as charged?\n\n#{entry.name}\n\n#{entry.amount.to_currency + ' ' + entry.charge_type.full_name}\n", id: "entry_#{entry.id}_mark_charged_link") unless entry.charged? %>
+        <%= link_to entry.name, entry, style: "text-decoration:none;color:#{entry.charged? ? '#404040' : '#FFB475'};", id: "entry_#{entry.id}_name" %>
+      </div>
+      <div data-object="entry-helper" style="display:none"><div class="entry-box"><%= entry.amount.to_currency %> <%= entry.name %></div></div>
+      <div style="clear:both"></div>
+    </div>
+  <% end %>
+  <% if entries.size > 0 %>
+    <% total_amount = entries.sum{|e| e.amount} %>
+    <div class="calendar-entry-amount<%= (total_amount > 0) ? (spending ? ' loss' : ' gain') : '' %><%= (total_amount < 0) ? (spending ? ' gain' : ' loss') : '' %>" style="border-top:1px solid #777; font-weight: bold">
+      <%= total_amount.to_currency %>
+    </div>
+    <div class="calendar-entry-name">Total <%= spending ? 'Spent' : 'Earned' %></div>
+  <% end %>
+  <div style="clear:both"></div>
+<% end %>
