@@ -27,9 +27,10 @@
         <td valign="top" style="padding:0px;border: 1px solid #ddd"
             class="<%= 'calendar-entry-body-today' if iDate == Date.today %>
                    <%= 'last-month' if iDate < @start_date %>
-                   <%= 'next-month' if iDate > @end_date %>"
-            onmouseover="$(this).addClass('hover');$('#calendar_box_<%= first_day_offset %>_new_entry_link').show();"
-            onmouseout="$(this).removeClass('hover');$('#calendar_box_<%= first_day_offset %>_new_entry_link').hide();"
+                   <%= 'next-month' if iDate > @end_date %> day_droppable"
+            data-billing-date="<%= iDate.strftime("%m/%d/%Y") %>"
+            onmouseover="$('#calendar_box_<%= first_day_offset %>_new_entry_link').show();"
+            onmouseout="$('#calendar_box_<%= first_day_offset %>_new_entry_link').hide();"
             ondblclick="openCalendarPopup('<%= iDate.strftime('%m/%d/%Y') %>');">
           <div style="width:100%">
             <div class="calendar-entry-heading">
@@ -40,40 +41,8 @@
                 <%= iDate.strftime("%e") %>
               <% end %>
             </div>
-            <div style="min-height:60px">
-              <% iDateEntries = @entries.select{ |e| e.billing_date == iDate and e.charge_type.counts_towards_spending? }.sort{ |a,b| a.id <=> b.id } %>
-              <% iDateEntriesTransfers = @entries.select{ |e| e.billing_date == iDate and not e.charge_type.counts_towards_spending? }.sort{ |a,b| a.id <=> b.id } %>
-              <% iDateEntries.each do |entry| %>
-                <div class="calendar-entry-amount"><%= entry.amount.to_currency %></div>
-                <div class="calendar-entry-name" title="<%=h entry.name %><%= ('&#13;' + h(entry.description)).html_safe unless entry.description.blank? %>">
-                  <%= link_to(image_tag('001_15.png', style: 'border:none', align: 'absmiddle', size: '11x11', title: 'Not Charged'), mark_charged_entry_path(entry, authenticity_token: form_authenticity_token), remote: true, method: :post, confirm: "Are you sure you want to mark this entry as charged?\n\n#{entry.name}\n\n#{entry.amount.to_currency + ' ' + entry.charge_type.full_name}\n", id: "entry_#{entry.id}_mark_charged_link") unless entry.charged? %>
-                  <%= link_to entry.name, entry, style: "text-decoration:none;color:#{entry.charged? ? '#404040' : '#FFB475'};", id: "entry_#{entry.id}_name" %>
-                </div>
-                <div style="clear:both"></div>
-              <% end %>
-              <% if iDateEntries.size > 0 %>
-                <% total_spent = iDateEntries.sum{|e| e.amount} %>
-                <div class="calendar-entry-amount<%= (total_spent > 0) ? ' loss' : '' %><%= (total_spent < 0) ? ' gain' : '' %>" style="border-top:1px solid #777; font-weight: bold">
-                  <%= total_spent.to_currency %>
-                </div>
-                <div class="calendar-entry-name">Total Spent</div>
-              <% end %>
-              <br />
-              <% iDateEntriesTransfers.each do |entry| %>
-                <div class="calendar-entry-amount"><%= entry.amount.to_currency %></div>
-                <div class="calendar-entry-name" title="<%=h entry.name %><%= ('&#13;' + h(entry.description)).html_safe unless entry.description.blank? %>">
-                  <%= link_to(image_tag('001_15.png', style: 'border:none', align: 'absmiddle', size: '11x11', title: 'Not Charged'), mark_charged_entry_path(entry, authenticity_token: form_authenticity_token), remote: true, method: :post, confirm: "Are you sure you want to mark this entry as charged?\n\n#{entry.name}\n\n#{entry.amount.to_currency + ' ' + entry.charge_type.full_name}\n", id: "entry_#{entry.id}_mark_charged_link") unless entry.charged? %>
-                  <%= link_to entry.name, entry, style: "text-decoration:none;color:#{entry.charged? ? '#404040' : '#FFB475'};", id: "entry_#{entry.id}_name" %>
-                </div>
-                <div style="clear:both"></div>
-              <% end %>
-              <% if iDateEntriesTransfers.size > 0 %>
-                <% total_transfered = iDateEntriesTransfers.sum{|e| e.amount} %>
-                <div class="calendar-entry-amount<%= (total_transfered > 0) ? ' gain' : '' %><%= (total_transfered < 0) ? ' loss' : '' %>" style="border-top:1px solid #777; font-weight: bold">
-                  <%= total_transfered.to_currency %>
-                </div>
-                <div class="calendar-entry-name">Total Earned</div>
-              <% end %>
+            <div style="min-height:60px" data-object="day-body" data-date="<%= iDate.strftime("%m/%d/%Y") %>">
+              <%= render partial: 'calendar_day_body', locals: { iDate: iDate } %>
             </div>
           </div>
         </td>
