@@ -1,0 +1,6 @@
+<%# Temporary, full form submit for simplicity %>
+$('#calendar-form').submit();
+
+
+<%# Refresh both dates %>
+// alert('update.js.erb <%= @entry.id %>')
