@@ -8,6 +8,7 @@
 == 1.8.0
 
 * Enhancements
+  * Entries can now be dragged to a new date on the calendar
   * Updated to Rails 3.2.11
   * Updated Thin web server to 1.5.0
   * Updated to Contour 1.1.2 and use Contour pagination theme
